certs/hello-one/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: hello-one
  namespace: h-one
spec: # politicas de acesso ao pod
  type: ClusterIP
  selector:
    app: hello-one
  ports:
    - protocol: TCP
      port: 82
      targetPort: "http"
